cmake_minimum_required(VERSION 3.9)
project("smol_tests" LANGUAGES CXX VERSION ${SMOL_VERSION})

function(SMOL_TEST_ADD_EXECUTABLE target sourceList)
  list(APPEND sourceList smol_test.cpp smol_test.h)
  add_executable(${target} ${sourceList})
  set_property(TARGET ${target} PROPERTY CXX_STANDARD 11)
  TARGET_INCLUDE_DIRECTORIES(${target} INTERFACE "${SOURCE_PATH}/include")
  TARGET_INCLUDE_DIRECTORIES(${target} INTERFACE "${SOURCE_PATH}/include/smol")
  TARGET_LINK_LIBRARIES(${target} PRIVATE smol ${OPENGL_LIBRARY})
  ADD_TEST(NAME ${target} COMMAND ${target})
endfunction()

SMOL_TEST_ADD_EXECUTABLE(test_arena test_arena.cpp smol_arena.cpp smol_arena.h)
SMOL_TEST_ADD_EXECUTABLE(test_handle_list test_handle_list.cpp smol_handle_list.cpp smol_handle_list.h)
SMOL_TEST_ADD_EXECUTABLE(test_math test_math.cpp smol_mat4.cpp smol_mat4.h)
